fix grid align-items

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -31,6 +31,7 @@
 .banner button {
   grid-row: 2;
   grid-column: 3/7;
+  align-self: self-start;
 }
 
 @media screen and (max-width: 1440px) {
